# triple_e

./: .gitignore  CITATION.cff  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/triple_e/: __init__.py  effective_dimension.py  entanglement_capability.py  expressibility.py
test/: test_basic.py  test_entangling_capability.py  test_expressibility.py  test_fisher.py  test_unit_tests.py  unit_tests.py
test/pennylane/: test_entangling_capability.py  test_expressibility.py
test/qiskit/: test_expressibility.py
test/test_qiskit/: test_entanglement_capability.py
triple_e/: __init__.py  effective_dimension.py  entanglement_capability.py  expressibility.py
