[metadata]
name = triple_e
version = 0.0.3
author = Till Muser
author_email = tmuser|at|ethz.ch
description = Metrics for VQCs, PQCs and QNNs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/till-m/triple_e
project_urls =
    Bug Tracker = https://github.com/till-m/triple_e/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20
    qiskit>=0.30

[options.packages.find]
where = src